[project]
name = "telegram-ask-mcp"
version = "0.1.0"
description = "Claude가 선택지를 물을 때 텔레그램으로 질문을 보내고 사용자의 답(버튼/번호/자유텍스트)을 받아오는 MCP 서버"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "naryeo628" }]
dependencies = ["mcp>=1.2.0"]

[project.scripts]
telegram-ask-mcp = "telegram_ask.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_ask"]
